--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   height: 618px;
   /* margin-left: 441px; */
   /* margin-top: 208px; */
+  /* margin-top: 208ddpx; */
   display: flex;
   border: 1px solid #cdc6db;
   align-items: center;
